--- a/web/index.html
+++ b/web/index.html
@@ -10,7 +10,7 @@
     <body>
 
 
-      	<input type="number" class="bgdIdInput" value="164153" style="width: 150px;">
+      	<input type="number" class="bgdIdInput" value="164153" style="width: 150px;" placeholder="BoardgameGeek ID">
       	<button>Get game rating!</button>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
